--- a/reference.bib
+++ b/reference.bib
@@ -2208,6 +2208,13 @@
   number  = {7}
 }
 
+@inproceedings{Nekrasov2021,
+  title     = {{Mix3D}: Out-of-Context Data Augmentation for 3D Scenes},
+  author    = {Nekrasov, Alexey and Schult, Jonas and Litany, Or and Leibe, Bastian and Engelmann, Francis},
+  booktitle = threeDV,
+  year      = {2021}
+}
+
 @article{Neumann2013,
   title   = {Sparse localized deformation components},
   author  = {Neumann, Thomas and Varanasi, Kiran and Wenger, Stephan and Wacker, Markus and Magnor, Marcus and Theobalt, Christian},
@@ -2270,6 +2277,7 @@
   number  = {3}
 }
 
+
 @article{Osada2002,
   author  = {Osada, Robert and Funkhouser, Thomas and Chazelle, Bernard and Dobkin, David},
   title   = {Shape distributions},
@@ -2288,7 +2296,6 @@
   number  = {2},
   year    = {2009}
 }
-
 
 @inproceedings{P.2004,
   author    = {BHAT, P. and INGRAM, S. AND TURK, G.},
@@ -2462,6 +2469,7 @@
   number  = {1}
 }
 
+
 @book{Redko2019,
   title     = {Advances in Domain Adaptation Theory},
   author    = {Ievgen Redko and Amaury Habrard and Emilie Morvant and Marc Sebban and Younès Bennani},
@@ -2476,7 +2484,6 @@
   booktitle = NeurIPS,
   year      = {2015}
 }
-
 
 @article{Ren2017,
   author  = {Ren, Mengwei and Niu, Liang and Fang, Yi},
@@ -2547,6 +2554,7 @@
   number  = {2}
 }
 
+
 @article{Ruckert2021,
   title   = {{ADOP}: Approximate differentiable one-pixel point rendering},
   author  = {R{\"u}ckert, Darius and Franke, Linus and Stamminger, Marc},
@@ -2561,7 +2569,6 @@
   booktitle = NeurIPS,
   year      = {2017}
 }
-
 
 @article{Sarbolandi2015,
   author  = {H. Sarbolandi and D. Lefloch and A. Kolb},
@@ -2631,6 +2638,7 @@
   year    = {2018}
 }
 
+
 @article{Shapira2008,
   author  = {Shapira, Lior and Shamir, Ariel and Cohen-Or, Daniel},
   title   = {Consistent mesh partitioning and skeletonisation using the shape diameter function},
@@ -2649,7 +2657,6 @@
   year    = {2010}
 }
 
-
 @article{Sharf2004,
   author  = {Sharf, Andrei and Alexa, Marc and Cohen-Or, Daniel},
   title   = {Context-based Surface Completion},
@@ -2659,6 +2666,7 @@
   number  = {3}
 }
 
+
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
   author  = {Sharf, Andrei and Lewiner, Thomas and Shklarski, Gil and Toledo, Sivan and Cohen-Or, Daniel},
@@ -2667,7 +2675,6 @@
   number  = {3},
   year    = {2007}
 }
-
 
 @inproceedings{Sharma2016,
   title     = {{VConv-DAE}: Deep volumetric shape learning without object labels},
@@ -2717,6 +2724,7 @@
   number  = {3}
 }
 
+
 @article{Shi2015,
   author  = {B. Shi and S. Bai and Z. Zhou and X. Bai},
   title   = {{DeepPano}: Deep panoramic representation for {3D} shape recognition},
@@ -2732,13 +2740,13 @@
   year    = {2021}
 }
 
-
 @article{Shoef2019,
   author  = {Shoef, Matan and Fogel, Sharon and Cohen-Or, Daniel},
   title   = {{PointWise}: An unsupervised point-wise feature learning network},
   journal = {arXiv preprint arXiv:1901.04544},
   year    = {2019}
 }
+
 
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shiqing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
@@ -2747,7 +2755,6 @@
   year    = {2016},
   volume  = {43}
 }
-
 
 @article{Sidi2011,
   author  = {Oana Sidi and Oliver van Kaick and Yanir Kleiman and Hao Zhang and Daniel Cohen-Or},
@@ -2807,6 +2814,7 @@
   year      = {2020}
 }
 
+
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
   title        = {Improved adversarial systems for {3D} object generation and reconstruction},
@@ -2821,7 +2829,6 @@
   note   = {arXiv:1405.4734 [cs.GR]},
   year   = {2014}
 }
-
 
 @inproceedings{Song2017,
   author    = {Song, Shuran and Yu, Fisher and Zeng, Andy and Chang, Angel X and Savva, Manolis and Funkhouser, Thomas},
@@ -2882,6 +2889,7 @@
   year      = {2020}
 }
 
+
 @article{Subr2009,
   author  = {Subr, Kartic and Soler, Cyril and Durand, Fr{\'e}do},
   title   = {Edge-preserving multiscale image decomposition based on local extrema},
@@ -2900,7 +2908,6 @@
   volume  = {13},
   number  = {5}
 }
-
 
 @article{Sun2008,
   author  = {Sun, Xin and Zhou, Kun and Stollnitz, Eric and Shi, Jiaoying and Guo, Baining},
@@ -2955,6 +2962,7 @@
   number  = {5}
 }
 
+
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
   author    = {Towaki Takikawa and Joey Litalien and  Kangxue Yin and  Karsten Kreis and  Charles Loop and  Derek Nowrouzezahrai and  Alec Jacobson and  Morgan McGuire and  Sanja Fidler},
@@ -2970,13 +2978,13 @@
   year    = {2019}
 }
 
-
 @inproceedings{Tancik2020,
   title     = {Fourier Features Let Networks Learn High Frequency Functions in Low Dimensional Domains},
   author    = {Matthew Tancik and Pratul P. Srinivasan and Ben Mildenhall and Sara Fridovich-Keil and Nithin Raghavan and Utkarsh Singhal and Ravi Ramamoorthi and Jonathan T. Barron and Ren Ng},
   booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @article{Tang2018,
   title   = {Real-time Compression and Streaming of {4D} Performances},
@@ -2994,7 +3002,6 @@
   booktitle = ECCV,
   year      = {2020}
 }
-
 
 @inproceedings{Tang2021,
   title     = {{OctField}: Hierarchical Implicit Functions for {3D} Modeling},
@@ -3019,13 +3026,13 @@
   number  = {3}
 }
 
+
 @inproceedings{Tasdizen2002,
   author    = {Tasdizen, Tolga and Whitaker, Ross and Burchard, Paul and Osher, Stanley},
   title     = {Geometric surface smoothing via anisotropic diffusion of normals},
   booktitle = {Proc. of the conference on Visualization},
   year      = {2002}
 }
-
 
 @inproceedings{Tatarchenko2016,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
@@ -3048,6 +3055,7 @@
   year      = {1995}
 }
 
+
 @inproceedings{Thomas2019,
   author    = {Hugues Thomas and Charles R. Qi and Jean-Emmanuel Deschaud and Beatriz Marcotegui and Fran\c{c}ois Goulette and Leonidas J. Guibas},
   title     = {{KPConv}: Flexible and deformable convolution for point clouds},
@@ -3062,7 +3070,6 @@
   booktitle = ECCV,
   year      = {2020}
 }
-
 
 @inproceedings{Tobin2017,
   title     = {Domain randomization for transferring deep neural networks from simulation to the real world},
@@ -3294,6 +3301,7 @@
   year      = {2021}
 }
 
+
 @article{Wang2020b,
   author  = {Hanchen Wang and Qi Liu and Xiangyu Yue and Joan Lasenby and Matthew J. Kusner},
   title   = {Pre-Training by Completing Point Clouds},
@@ -3308,7 +3316,6 @@
   booktitle = AAAI,
   year      = {2021}
 }
-
 
 @inproceedings{Wang2021a,
   title     = {Generalizing to unseen domains: A survey on domain generalization},
@@ -3363,6 +3370,7 @@
   year      = {2022}
 }
 
+
 @article{Wu2005,
   author  = {Jianhua Wu and Leif Kobbelt},
   title   = {Structure recovery via hybrid variational surface approximation},
@@ -3371,7 +3379,6 @@
   volume  = {24},
   number  = {3}
 }
-
 
 @inproceedings{Wu2015,
   author    = {Wu, Zhirong and Song, Shuran and Khosla, Aditya and Yu, Fisher and Zhang, Linguang and Tang, Xiaoou and Xiao, Jianxiong},
@@ -3410,6 +3417,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Wu2018b,
   author    = {Wu, Jiajun and Zhang, Chengkai and Zhang, Xiuming and Zhang, Zhoutong and Freeman, William T and Tenenbaum, Joshua B},
   title     = {Learning shape priors for single-view {3D} completion and reconstruction},
@@ -3426,7 +3434,6 @@
   volume  = {38},
   number  = {4}
 }
-
 
 @inproceedings{Wu2019a,
   author    = {Wenxuan Wu and Zhongang Qi and Li Fuxin},
@@ -3504,6 +3511,7 @@
   year      = {2015}
 }
 
+
 @article{Xu2015a,
   author  = {Xu, Kai and Kim, Vladimir G. and Huang, Qixing and Kalogerakis, Evangelos},
   title   = {Data-Driven Shape Analysis and Processing},
@@ -3520,7 +3528,6 @@
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @inproceedings{Xu2021,
   title     = {{PAConv}: Position Adaptive Convolution with Dynamic Kernel Assembling on Point Clouds},
@@ -3544,6 +3551,7 @@
   issn      = {1530-1052}
 }
 
+
 @inproceedings{Yan2006,
   author    = {Yan, Dong-Ming and Liu, Yang and Wang, Wenping},
   booktitle = {Geom. Model. and Proc.},
@@ -3558,7 +3566,6 @@
   booktitle = NeurIPS,
   year      = {2016}
 }
-
 
 @article{Yan2020,
   title   = {{COVID-19} Chest {CT} Image Segmentation--A Deep Convolutional Neural Network Solution},
@@ -3576,13 +3583,13 @@
   year    = {2015}
 }
 
+
 @inproceedings{Yang2017,
   author    = {Bo Yang and Hongkai Wen and Sen Wang and Ronald Clark and Andrew Markham and Niki Trigoni},
   title     = {{3D} object reconstruction from a single depth view with adversarial learning},
   booktitle = {ICCV Workshop},
   year      = {2017}
 }
-
 
 @article{Yang2018,
   author  = {Yang, Bo and Rosa, Stefano and Markham, Andrew and Trigoni, Niki and Wen, Hongkai},
@@ -3630,6 +3637,7 @@
   number  = {4}
 }
 
+
 @inproceedings{Yi2017b,
   author    = {Li Yi and Hao Su and Xingwen Guo and Leonidas Guibas},
   title     = {{SyncSpecCNN}: Synchronized spectral {CNN} for {3D} shape segmentation},
@@ -3655,7 +3663,6 @@
   year      = {2018}
 }
 
-
 @article{Yu2004,
   author  = {Yu, Yizhou and Zhou, Kun and Xu, Dong and Shi, Xiaohan and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
   title   = {Mesh editing with Poisson-based gradient field manipulation},
@@ -3672,6 +3679,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Yu2019,
   author    = {Fenggen Yu and Kun Liu and Yan Zhang and Chenyang Zhu and Kai Xu},
   booktitle = CVPR,
@@ -3686,7 +3694,6 @@
   booktitle = CVPR,
   year      = {2021}
 }
-
 
 @article{Yu2021a,
   title   = {{Point-BERT}: Pre-training {3D} Point Cloud Transformers with Masked Point Modeling},
@@ -3723,6 +3730,7 @@
   year      = {2017}
 }
 
+
 @article{Zhang2010,
   author  = {Zhang, Hao and Van Kaick, Oliver and Dyer, Ramsay},
   title   = {Spectral mesh processing},
@@ -3731,7 +3739,6 @@
   volume  = {29},
   number  = {6}
 }
-
 
 @article{Zhang2012,
   author  = {Zhang, Juyong and Zheng, Jianmin and Wu, Chunlin and Cai, Jianfei},
@@ -3742,13 +3749,13 @@
   number  = {3}
 }
 
+
 @inproceedings{Zhang2014,
   author    = {Zhang, Qi and Shen, Xiaoyong and Xu, Li and Jia, Jiaya},
   title     = {Rolling guidance filter},
   booktitle = {ECCV},
   year      = {2014}
 }
-
 
 @article{Zhang2015,
   author  = {Zhang, Huayan and Wu, Chunlin and Zhang, Juyong and Deng, Jiansong},
@@ -3768,6 +3775,7 @@
   issue   = {7}
 }
 
+
 @inproceedings{Zhang2016,
   author    = {Zhang, Richard and Isola, Phillip and Efros, Alexei A},
   booktitle = ECCV,
@@ -3783,13 +3791,20 @@
   year      = {2018}
 }
 
+@inproceedings{Zhang2018a,
+  title     = {mixup: Beyond Empirical Risk Minimization},
+  author    = {Zhang, Hongyi and Cisse, Moustapha and Dauphin, Yann N and Lopez-Paz, David},
+  booktitle = ICLR,
+  year      = {2018}
+}
+
+
 @inproceedings{Zhang2019,
   title     = {Cascaded Context Pyramid for Full-Resolution {3D} Semantic Scene Completion},
   author    = {Zhang, Pingping and Liu, Wei and Lei, Yinjie and Lu, Huchuan and Yang, Xiaoyun},
   booktitle = ICCV,
   year      = {2019}
 }
-
 
 @inproceedings{Zhang2019a,
   author    = {Ling Zhang and Zhigang Zhu},
@@ -3809,6 +3824,13 @@
   title   = {{PVT}: Point-Voxel Transformer for {3D} Deep Learning},
   author  = {Zhang, Cheng and Wan, Haocheng and Liu, Shengqiang and Shen, Xinyi and Wu, Zizhao},
   journal = {arXiv preprint arXiv:2108.06076},
+  year    = {2021}
+}
+
+@article{Zhang2021b,
+  title   = {{PointCutMix}: Regularization strategy for point cloud classification},
+  author  = {Zhang, Jinlai and Chen, Lyujie and Ouyang, Bo and Liu, Binbin and Zhu, Jihong and Chen, Yujing and Meng, Yanmei and Wu, Danfeng},
+  journal = {arXiv preprint arXiv:2101.01461},
   year    = {2021}
 }
 
@@ -3895,6 +3917,7 @@
   year    = {2018}
 }
 
+
 @article{Zhou2021,
   title   = {Simple multi-dataset detection},
   author  = {Zhou, Xingyi and Koltun, Vladlen and Kr{\"a}henb{\"u}hl, Philipp},
@@ -3908,7 +3931,6 @@
   booktitle = ICCV,
   year      = {2017}
 }
-
 
 @inproceedings{Zhu2020,
   title     = {{AdaCoSeg}: Adaptive Shape Co-Segmentation with Group Consistency Loss},
