--- a/reference.bib
+++ b/reference.bib
@@ -587,7 +587,7 @@
 }
 
 @inproceedings{Choy2016,
-  author    = {Choy, Christopher B and Xu, Danfei and Gwak, JunYoung and Chen, Kevin and Savarese, Silvio},
+  author    = {Choy, Christopher and Xu, Danfei and Gwak, JunYoung and Chen, Kevin and Savarese, Silvio},
   title     = {{3D-R2N2}: A unified approach for single and multi-view {3D} object reconstruction},
   booktitle = ECCV,
   year      = {2016}
