--- a/reference.bib
+++ b/reference.bib
@@ -27,7 +27,6 @@
 @String { TPAMI    = {IEEE Trans. Pattern Anal. Mach. Intell.} }
 @String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
 
-
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas Guibas},
   title     = {Learning representations and generative models for {3D} point clouds},
@@ -55,13 +54,13 @@
   number  = {2}
 }
 
+
 @inproceedings{Adamson2003,
   author    = {Adamson, Anders and Alexa, Marc},
   title     = {Approximating and intersecting surfaces from points},
   booktitle = SGPOLD,
   year      = {2003}
 }
-
 
 @inproceedings{Afouras2018,
   author    = {Afouras, Triantafyllos and Chung, Joon Son and Zisserman, Andrew},
@@ -77,6 +76,7 @@
   booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @article{Alhashim2012,
   author  = {Alhashim, Ibraheem and Zhang, Hao and Liu, Ligang},
@@ -94,13 +94,13 @@
   year      = {2009}
 }
 
-
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
   booktitle = {Advances in Spatial Databases},
   title     = {{3D} shape histograms for similarity search and classification in spatial databases},
   year      = {1999}
 }
+
 
 @inproceedings{Aoki2019,
   author    = {Aoki, Yasuhiro and Goforth, Hunter and Arun Srivatsan, Rangaprasad and Lucey, Simon},
@@ -109,13 +109,13 @@
   year      = {2019}
 }
 
-
 @inproceedings{Armeni2016,
   title     = {{3D} Semantic Parsing of Large-Scale Indoor Spaces},
   author    = {Iro Armeni and Ozan Sener and Amir R. Zamir and Helen Jiang and Ioannis Brilakis and Martin Fischer and Silvio Savarese},
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @article{Armeni2017,
   title   = {Joint {2D-3D}-Semantic Data for Indoor Scene Understanding},
@@ -130,7 +130,6 @@
   booktitle = {SODA},
   year      = {2007}
 }
-
 
 @article{Attene2013,
   author  = {Attene, Marco and Campen, Marcel and Kobbelt, Leif},
@@ -150,6 +149,7 @@
   number  = {4},
   journal = SIG
 }
+
 
 @inproceedings{Atzmon2020,
   title     = {{SAL}: Sign agnostic learning of shapes from raw data},
@@ -237,7 +237,6 @@
   year    = {2020}
 }
 
-
 @article{Bajaj2003,
   author  = {Bajaj, Chandrajit L. and Xu, Guoliang},
   title   = {Anisotropic diffusion of surfaces and functions on surfaces},
@@ -246,6 +245,7 @@
   volume  = {22},
   number  = {1}
 }
+
 
 @article{Battaglia2018,
   title   = {Relational inductive biases, deep learning, and graph networks},
@@ -319,7 +319,6 @@
   number  = {3}
 }
 
-
 @article{Bommes2013,
   author  = {Bommes, David and Campen, Marcel and Ebke, Hans-Christian and Alliez, Pierre and Kobbelt, Leif},
   title   = {Integer-grid maps for reliable quad meshing},
@@ -328,6 +327,7 @@
   volume  = {32},
   number  = {4}
 }
+
 
 @article{Bommes2013a,
   author  = {Bommes, David and L\'{e}vy, Bruno and Pietroni, Nico and Puppo, Enrico and Silva, Claudio and Tarini, Marco and Zorin, Denis},
@@ -354,7 +354,6 @@
   year      = {2016}
 }
 
-
 @article{Botsch2008,
   author  = {Botsch, Mario and Sorkine, Olga},
   title   = {On linear variational surface deformation methods},
@@ -363,6 +362,7 @@
   volume  = {14},
   number  = {1}
 }
+
 
 @book{Botsch2010,
   title  = {Polygon Mesh Processing},
@@ -532,13 +532,13 @@
   number  = {4}
 }
 
-
 @inproceedings{Chen2019,
   title     = {Learning implicit fields for generative shape modeling},
   author    = {Chen, Zhiqin and Zhang, Hao},
   booktitle = CVPR,
   year      = {2019}
 }
+
 
 @inproceedings{Chen2019a,
   author    = {Zhiqin Chen and Kangxue Yin and Matthew Fisher and Siddhartha Chaudhuri and Hao Zhang},
@@ -568,7 +568,6 @@
   year      = {2021}
 }
 
-
 @inproceedings{Chibane2020,
   title     = {Implicit functions in feature space for 3d shape reconstruction and completion},
   author    = {Chibane, Julian and Alldieck, Thiemo and Pons-Moll, Gerard},
@@ -586,6 +585,7 @@
   number  = {4}
 }
 
+
 @inproceedings{Choy2016,
   author    = {Choy, Christopher and Xu, Danfei and Gwak, JunYoung and Chen, Kevin and Savarese, Silvio},
   title     = {{3D-R2N2}: A unified approach for single and multi-view {3D} object reconstruction},
@@ -600,7 +600,6 @@
   year      = {2019}
 }
 
-
 @article{Chuang2011,
   author  = {Chuang, Ming and Kazhdan, Michael},
   title   = {Interactive and anisotropic geometry processing using the screened Poisson equation},
@@ -609,6 +608,7 @@
   volume  = {30},
   number  = {4}
 }
+
 
 @article{Cignoni1998,
   author  = {P. Cignoni and C. Rocchini and R. Scopigno},
@@ -626,7 +626,6 @@
   year      = {2000}
 }
 
-
 @article{Cohen2018,
   title   = {Spherical {CNNs}},
   author  = {Cohen, Taco S and Geiger, Mario and K{\"o}hler, Jonas and Welling, Max},
@@ -643,6 +642,7 @@
   number  = {3},
   volume  = {23}
 }
+
 
 @misc{Contributors2018,
   author = {Wikipedia Contributors},
@@ -852,7 +852,6 @@
   year      = {2014}
 }
 
-
 @inproceedings{Fey2018,
   title     = {{SplineCNN}: Fast Geometric Deep Learning with Continuous {B}-Spline Kernels},
   author    = {Fey, Matthias and Lenssen, Jan Eric and Weichert, Frank and M{\"u}ller, Heinrich},
@@ -868,6 +867,7 @@
   year      = {2019}
 }
 
+
 @inproceedings{Firman2016,
   author    = {Michael Firman and Oisin Mac Aodha and Simon Julier and Gabriel J. Brostow},
   title     = {Structured prediction of unobserved voxels from a single depth image},
@@ -875,13 +875,13 @@
   year      = {2016}
 }
 
-
 @article{Fish2014,
   author  = {Noa Fish and Melinos Averkiou and Oliver van Kaick and Olga Sorkine-Hornung and Daniel Cohen-Or and Niloy J. Mitra},
   title   = {Meta-representation of shape families},
   journal = SIG,
   year    = {2014}
 }
+
 
 @article{Fleishman2003,
   author  = {Fleishman, Shachar and Drori, Iddo and Cohen-Or, Daniel},
@@ -1004,7 +1004,6 @@
   year      = {2015}
 }
 
-
 @article{Graham2017,
   author  = {Graham, Benjamin and van der Maaten, Laurens},
   title   = {Submanifold Sparse Convolutional Networks},
@@ -1019,6 +1018,7 @@
   booktitle = CVPR,
   year      = 2018
 }
+
 
 @inproceedings{Grill2020,
   author    = {Jean-Bastien Grill and Florian Strub and Florent Altché and Corentin Tallec and Pierre H. Richemond and Elena Buchatskaya and Carl Doersch and BernardoAvila Pires and Zhaohan Daniel Guo and Mohammad Gheshlaghi Azar and Bilal Piot and Koray Kavukcuoglu and Rémi Munos and Michal Valko},
@@ -1074,7 +1074,6 @@
   number  = {1}
 }
 
-
 @inproceedings{Guo2018,
   author    = {Guo, Yuxiao and Tong, Xin},
   title     = {View-volume Network for Semantic Scene Completion from a Single Depth Image},
@@ -1091,6 +1090,7 @@
   eprint        = {1912.12033},
   primaryclass  = {cs.CV}
 }
+
 
 @article{Guo2021,
   title   = {{PCT}: Point cloud transformer},
@@ -1261,6 +1261,14 @@
   title     = {Momentum contrast for unsupervised visual representation learning},
   year      = {2020}
 }
+
+@inproceedings{He2022,
+  author    = {Kaiming He and Xinlei Chen and Saining Xie and Yanghao Li and Piotr Doll{\'a}r and Ross Girshick},
+  booktitle = CVPR,
+  title     = {Masked Autoencoders Are Scalable Vision Learners},
+  year      = {2022}
+}
+
 
 @inproceedings{Hegde2016,
   author    = {Vishakh Hegde and Reza Zadeh},
@@ -1683,13 +1691,13 @@
   number  = {3}
 }
 
-
 @inproceedings{Kraehenbuehl2011,
   author    = {Kr{\"a}henb{\"u}hl, Philipp and Koltun, Vladlen},
   title     = {Efficient inference in fully connected {CRFs} with gaussian edge potentials},
   booktitle = NeurIPS,
   year      = {2011}
 }
+
 
 @inproceedings{Kraehenbuehl2013,
   author    = {Kr{\"a}henb{\"u}hl, Philipp and Koltun, Vladlen},
@@ -1759,6 +1767,7 @@
   year      = {2005}
 }
 
+
 @inproceedings{Lee2015,
   author    = {Donghoon Lee and Hyunsin Park and Yoo, C.D.},
   title     = {Face alignment using cascade Gaussian process regression trees},
@@ -1799,7 +1808,6 @@
   year    = {2010}
 }
 
-
 @article{Li2011,
   author  = {Li, Yangyan and Wu, Xiaokun and Chrysathou, Yiorgos and Sharf, Andrei and Cohen-Or, Daniel and Mitra, Niloy J.},
   title   = {{GlobFit}: Consistently fitting primitives by discovering global relations},
@@ -1809,13 +1817,13 @@
   number  = {4}
 }
 
-
 @inproceedings{Li2016,
   author    = {Yangyan Li and Soeren Pirk and Hao Su and Charles R. Qi and Leonidas J. Guibas},
   title     = {{FPNN}: field probing neural networks for {3D} data},
   booktitle = NeurIPS,
   year      = {2016}
 }
+
 
 @article{Li2017,
   author  = {Li, Jun and Xu, Kai and Chaudhuri, Siddhartha and Yumer, Ersin and Zhang, Hao and Guibas, Leonidas},
@@ -1826,6 +1834,7 @@
   number  = {4},
   issn    = {0730-0301}
 }
+
 
 @inproceedings{Li2018,
   title     = {{PointCNN}: Convolution on X-transformed points},
@@ -1848,7 +1857,6 @@
   year    = {2020}
 }
 
-
 @article{Li2021,
   title   = {{SP-GAN}: Sphere-Guided {3D} Shape Generation and Manipulation},
   author  = {Li, Ruihui and Li, Xianzhi and Hui, Ke-Hei and Fu, Chi-Wing},
@@ -1864,6 +1872,7 @@
   year    = {2021},
   journal = {arXiv preprint arXiv:2111.01353}
 }
+
 
 @article{Lim2016,
   author  = {Lim, Isaak and Gehre, Anne and Kobbelt, Leif},
@@ -2277,7 +2286,6 @@
   number  = {3}
 }
 
-
 @article{Osada2002,
   author  = {Osada, Robert and Funkhouser, Thomas and Chazelle, Bernard and Dobkin, David},
   title   = {Shape distributions},
@@ -2286,7 +2294,6 @@
   number  = {4},
   year    = {2002}
 }
-
 
 @article{Oztireli2009,
   title   = {Feature preserving point set surfaces based on non-linear kernel regression},
@@ -2297,12 +2304,14 @@
   year    = {2009}
 }
 
+
 @inproceedings{P.2004,
   author    = {BHAT, P. and INGRAM, S. AND TURK, G.},
   title     = {Geometric texture synthesis by example},
   booktitle = SGPOLD,
   year      = {2004}
 }
+
 
 @inproceedings{Paine2015,
   author    = {Paine, Tom Le and Khorrami, Pooya and Han, Wei and Huang, Thomas S},
@@ -2369,6 +2378,13 @@
   title   = {Poisson image editing},
   journal = SIG,
   year    = {2003}
+}
+
+@inproceedings{Pfaff2020,
+  title     = {Learning Mesh-Based Simulation with Graph Networks},
+  author    = {Pfaff, Tobias and Fortunato, Meire and Sanchez-Gonzalez, Alvaro and Battaglia, Peter},
+  booktitle = ICLR,
+  year      = {2020}
 }
 
 @inproceedings{Prakash2019,
@@ -2469,7 +2485,6 @@
   number  = {1}
 }
 
-
 @book{Redko2019,
   title     = {Advances in Domain Adaptation Theory},
   author    = {Ievgen Redko and Amaury Habrard and Emilie Morvant and Marc Sebban and Younès Bennani},
@@ -2484,6 +2499,7 @@
   booktitle = NeurIPS,
   year      = {2015}
 }
+
 
 @article{Ren2017,
   author  = {Ren, Mengwei and Niu, Liang and Fang, Yi},
@@ -2554,7 +2570,6 @@
   number  = {2}
 }
 
-
 @article{Ruckert2021,
   title   = {{ADOP}: Approximate differentiable one-pixel point rendering},
   author  = {R{\"u}ckert, Darius and Franke, Linus and Stamminger, Marc},
@@ -2568,6 +2583,14 @@
   author    = {Sabour, Sara and Frosst, Nicholas and Hinton, Geoffrey E},
   booktitle = NeurIPS,
   year      = {2017}
+}
+
+
+@inproceedings{Sanchez2020,
+  title     = {Learning to simulate complex physics with graph networks},
+  author    = {Sanchez-Gonzalez, Alvaro and Godwin, Jonathan and Pfaff, Tobias and Ying, Rex and Leskovec, Jure and Battaglia, Peter},
+  booktitle = ICML,
+  year      = {2020}
 }
 
 @article{Sarbolandi2015,
@@ -3322,6 +3345,22 @@
   author    = {Wang, Jindong and Lan, Cuiling and Liu, Chang and Ouyang, Yidong and Zeng, Wenjun and Qin, Tao},
   booktitle = {IJCAI},
   year      = {2021}
+}
+
+@inproceedings{Wang2021b,
+  title     = {Spline Positional Encoding for Learning {3D} Implicit Signed Distance Fields},
+  author    = {Wang, Peng-Shuai and Liu, Yang and Yang, Yu-Qi and Tong, Xin},
+  booktitle = {IJCAI},
+  year      = {2021}
+}
+
+@article{Wang2022,
+  title   = {Dual Octree Graph Networks for Learning Adaptive Volumetric Shape Representations},
+  author  = {Wang, Peng-Shuai and Liu, Yang and Tong, Xin},
+  journal = SIG,
+  year    = {2022},
+  volume  = {41},
+  number  = {4}
 }
 
 @misc{Warehouse2018,
