--- a/reference.bib
+++ b/reference.bib
@@ -1738,6 +1738,13 @@
   series    = {SPM '05}
 }
 
+@inproceedings{Lai2022,
+  title     = {Stratified Transformer for {3D} Point Cloud Segmentation},
+  author    = {Xin Lai, Jianhui Liu, Li Jiang, Liwei Wang, Hengshuang Zhao, Shu Liu, Xiaojuan Qi, Jiaya Jia},
+  booktitle = CVPR,
+  year      = {2022}
+}
+
 @article{Laine2017,
   title   = {Temporal ensembling for semi-supervised learning},
   author  = {Laine, Samuli and Aila, Timo},
@@ -1799,6 +1806,7 @@
   editor    = {Jiao, Xiangmin and Weill, Jean-Christophe}
 }
 
+
 @article{Lewiner2010,
   author  = {Lewiner, Thomas and Mello, Vinícius and Peixoto, Adelailson and Pesco, Sinésio and Lopes, Hélio},
   title   = {Fast Generation of Pointerless {Octree} Duals},
@@ -1849,6 +1857,7 @@
   booktitle = CVPR,
   year      = 2018
 }
+
 
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
@@ -2277,6 +2286,7 @@
   year      = {2019}
 }
 
+
 @article{Ohtake2003,
   author  = {Ohtake, Yutaka and Belyaev, Alexander and Alexa, Marc and Turk, Greg and Seidel, Hans-Peter},
   title   = {Multi-level partition of unity implicits},
@@ -2476,6 +2486,7 @@
   year    = 2020
 }
 
+
 @article{Ray2009,
   author  = {Ray, Nicolas and Vallet, Bruno and Alonso, Laurent and L\'{e}vy, Bruno},
   title   = {Geometry-aware direction field processing},
@@ -2491,7 +2502,6 @@
   year      = {2019},
   publisher = {Elsevier}
 }
-
 
 @inproceedings{Ren2015,
   author    = {Shaoqing Ren and Kaiming He and Ross Girshick and Jian Sun},
@@ -2561,6 +2571,7 @@
   issn    = {0377-0427}
 }
 
+
 @article{Roveri2018,
   author  = {Roveri, Riccardo and \"{O}ztireli, A. Cengiz and Pandele, Ioana and Gross, Markus},
   title   = {{PointProNets}: Consolidation of Point Clouds with Convolutional Neural Networks},
@@ -2576,7 +2587,6 @@
   journal = {arXiv preprint arXiv:2110.06635},
   year    = {2021}
 }
-
 
 @inproceedings{Sabour2017,
   title     = {Dynamic routing between capsules},
@@ -2654,6 +2664,7 @@
   number  = {6}
 }
 
+
 @article{Shao2018,
   title   = {{H-CNN}: spatial hashing based {CNN} for {3D} shape analysis},
   author  = {Shao, Tianjia and Yang, Yin and Weng, Yanlin and Hou, Qiming and Zhou, Kun},
@@ -2671,7 +2682,6 @@
   number  = {4}
 }
 
-
 @article{Shapira2010,
   title   = {Contextual part analogies in {3D} objects},
   author  = {Shapira, Lior and Shalom, Shy and Shamir, Ariel and Cohen-Or, Daniel and Zhang, Hao},
@@ -2679,6 +2689,7 @@
   volume  = {89},
   year    = {2010}
 }
+
 
 @article{Sharf2004,
   author  = {Sharf, Andrei and Alexa, Marc and Cohen-Or, Daniel},
@@ -2688,7 +2699,6 @@
   volume  = {23},
   number  = {3}
 }
-
 
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
@@ -2738,6 +2748,7 @@
   number  = {6}
 }
 
+
 @article{Shi2006,
   author  = {Shi, Lin and Yu, Yizhou and Bell, Nathan and Feng, Wei-Wen},
   title   = {A fast multigrid algorithm for mesh deformation},
@@ -2755,7 +2766,6 @@
   year    = {2015}
 }
 
-
 @article{Shi2021,
   title   = {Multi-dataset Pretraining: A Unified Model for Semantic Segmentation},
   author  = {Shi, Bowen and Zhang, Xiaopeng and Xu, Haohang and Dai, Wenrui and Zou, Junni and Xiong, Hongkai and Tian, Qi},
@@ -2763,13 +2773,13 @@
   year    = {2021}
 }
 
+
 @article{Shoef2019,
   author  = {Shoef, Matan and Fogel, Sharon and Cohen-Or, Daniel},
   title   = {{PointWise}: An unsupervised point-wise feature learning network},
   journal = {arXiv preprint arXiv:1901.04544},
   year    = {2019}
 }
-
 
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shiqing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
@@ -2830,6 +2840,7 @@
   year      = {2019}
 }
 
+
 @inproceedings{Sitzmann2020,
   title     = {Implicit Neural Representations with Periodic Activation Functions},
   author    = {Sitzmann, Vincent and Martel, Julien NP and Bergman, Alexander W and Lindell, David B and Wetzstein, Gordon},
@@ -2844,7 +2855,6 @@
   howpublished = {arXiv:1707.09557 [cs.CV]},
   year         = {2017}
 }
-
 
 @unpublished{Solomon2014,
   author = {Solomon, Justin and Crane, Keenan and Butscher, Adrian and Wojtan, Chris},
@@ -2905,6 +2915,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Su2019,
   title     = {{VL-BERT}: Pre-training of generic visual-linguistic representations},
   author    = {Su, Weijie and Zhu, Xizhou and Cao, Yue and Li, Bin and Lu, Lewei and Wei, Furu and Dai, Jifeng},
@@ -2921,7 +2932,6 @@
   volume  = {28},
   number  = {5}
 }
-
 
 @article{Sun2007,
   author  = {Xianfang Sun and Rosin, P.~L. and Martin, R.~R. and Langbein, F.~C.},
@@ -2976,6 +2986,7 @@
   number  = {6}
 }
 
+
 @article{Tagliasacchi2011,
   author  = {Tagliasacchi, Andrea and Olson, Matt and Zhang, Hao and Hamarneh, Ghassan and Cohen-Or, Daniel},
   title   = {{VASE}: Volume-Aware Surface Evolution for Surface Reconstruction from Incomplete Point Clouds},
@@ -2993,13 +3004,13 @@
   booktitle = CVPR
 }
 
-
 @article{Tan2019,
   title   = {{LXMERT}: Learning cross-modality encoder representations from transformers},
   author  = {Tan, Hao and Bansal, Mohit},
   journal = {arXiv preprint arXiv:1908.07490},
   year    = {2019}
 }
+
 
 @inproceedings{Tancik2020,
   title     = {Fourier Features Let Networks Learn High Frequency Functions in Low Dimensional Domains},
@@ -3017,7 +3028,6 @@
   number  = {6},
   year    = {2018}
 }
-
 
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
@@ -3040,6 +3050,7 @@
   year      = {2021}
 }
 
+
 @article{Tarini2004,
   author  = {Tarini, Marco and Hormann, Kai and Cignoni, Paolo and Montani, Claudio},
   title   = {{PolyCube-Maps}},
@@ -3048,7 +3059,6 @@
   volume  = {23},
   number  = {3}
 }
-
 
 @inproceedings{Tasdizen2002,
   author    = {Tasdizen, Tolga and Whitaker, Ross and Burchard, Paul and Osher, Stanley},
@@ -3071,6 +3081,7 @@
   year      = {2017}
 }
 
+
 @inproceedings{Taubin1995,
   author    = {Taubin, Gabriel},
   title     = {A signal processing approach to fair surface design},
@@ -3085,7 +3096,6 @@
   booktitle = ICCV,
   year      = 2019
 }
-
 
 @inproceedings{Tian2020,
   title     = {Contrastive multiview coding},
@@ -3317,6 +3327,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Wang2020a,
   title     = {Dense Contrastive Learning for Self-Supervised Visual Pre-Training},
   author    = {Wang, Xinlong and Zhang, Rufeng and Shen, Chunhua and Kong, Tao and Li, Lei},
@@ -3331,7 +3342,6 @@
   journal = {arXiv:2010.01089},
   year    = {2020}
 }
-
 
 @inproceedings{Wang2021,
   title     = {Unsupervised {3D} Learning for Shape Analysis via Multiresolution Instance Discrimination},
@@ -3402,13 +3412,13 @@
   year      = {2021}
 }
 
+
 @inproceedings{Williams2022,
   title     = {Neural Fields as Learnable Kernels for {3D} Reconstruction},
   author    = {Williams, Francis and Gojcic, Zan and Khamis, Sameh and Zorin, Denis and Bruna, Joan and Fidler, Sanja and Litany, Or},
   booktitle = CVPR,
   year      = {2022}
 }
-
 
 @article{Wu2005,
   author  = {Jianhua Wu and Leif Kobbelt},
@@ -3449,6 +3459,7 @@
   number  = {5}
 }
 
+
 @inproceedings{Wu2018a,
   author    = {Wu, Zhirong and Xiong, Yuanjun and Yu, Stella X. and Lin, Dahua},
   title     = {Unsupervised Feature Learning via Non-Parametric Instance Discrimination},
@@ -3463,7 +3474,6 @@
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @article{Wu2019,
   author  = {Zhijie Wu and Xiang Wang and Di Lin and Dani Lischinski and Daniel Cohen-Or and Hui Huang},
@@ -3543,6 +3553,7 @@
   booktitle = {Proceedings of Graphics Interface}
 }
 
+
 @inproceedings{Xu2015,
   author    = {Li Xu and Jimmy SJ. Ren and Qiong Yan and Renjie Liao and Jiaya Jia},
   title     = {Deep edge-aware filters},
@@ -3559,7 +3570,6 @@
   volume  = {36},
   number  = {1}
 }
-
 
 @inproceedings{Xu2018,
   author    = {Xu, Yifan and Fan, Tianqi and Xu, Mingye and Zeng, Long and Qiao, Yu},
@@ -3582,6 +3592,7 @@
   year      = {2002}
 }
 
+
 @inproceedings{Yagou2003,
   author    = {Yagou, H. and Ohtake, Y. and Belyaev, A.G.},
   title     = {Mesh denoising via iterative alpha-trimming and nonlinear diffusion of normals with automatic thresholding},
@@ -3598,7 +3609,6 @@
   year      = {2006}
 }
 
-
 @inproceedings{Yan2016,
   author    = {Xinchen Yan and Jimei Yang and Ersin Yumer and Yijie Guo and Honglak Lee},
   title     = {Perspective transformer nets: Learning single-view {3D} object reconstruction without {3D} supervision},
@@ -3613,6 +3623,7 @@
   year    = {2020}
 }
 
+
 @article{Yang2015,
   title   = {{Go-ICP}: A globally optimal solution to {3D ICP} point-set registration},
   author  = {Yang, Jiaolong and Li, Hongdong and Campbell, Dylan and Jia, Yunde},
@@ -3621,7 +3632,6 @@
   number  = {11},
   year    = {2015}
 }
-
 
 @inproceedings{Yang2017,
   author    = {Bo Yang and Hongkai Wen and Sen Wang and Ronald Clark and Andrew Markham and Niki Trigoni},
@@ -3667,6 +3677,7 @@
   year         = {2017}
 }
 
+
 @article{Yi2017a,
   author  = {Yi, Li and Guibas, Leonidas and Hertzmann, Aaron and Kim, Vladimir G. and Su, Hao and Yumer, Ersin},
   title   = {Learning hierarchical shape segmentation and labeling from online repositories},
@@ -3694,7 +3705,6 @@
   number  = {4}
 }
 
-
 @inproceedings{You2018,
   author    = {You, Haoxuan and Feng, Yifan and Ji, Rongrong and Gao, Yue},
   booktitle = {Proceedings of the 26th ACM international conference on Multimedia},
@@ -3711,6 +3721,7 @@
   number  = {3}
 }
 
+
 @inproceedings{Yu2018,
   author    = {Yu, Lequan and Li, Xianzhi and Fu, Chi-Wing and Cohen-Or, Daniel and Heng, Pheng-Ann},
   title     = {{PU-Net}: Point Cloud Upsampling Network},
@@ -3725,7 +3736,6 @@
   title     = {{PartNet}: A Recursive Part Decomposition Network for Fine-grained and Hierarchical Shape Segmentation},
   year      = {2019}
 }
-
 
 @inproceedings{Yu2021,
   title     = {{Lite-HRNet}: A Lightweight High-Resolution Network},
@@ -3762,13 +3772,13 @@
   year      = {2014}
 }
 
+
 @inproceedings{Zeng2017,
   title     = {{3DMatch}: Learning local geometric descriptors from {RGBD} reconstructions},
   author    = {Zeng, Andy and Song, Shuran and Nie{\ss}ner, Matthias and Fisher, Matthew and Xiao, Jianxiong and Funkhouser, Thomas},
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @article{Zhang2010,
   author  = {Zhang, Hao and Van Kaick, Oliver and Dyer, Ramsay},
@@ -3779,6 +3789,7 @@
   number  = {6}
 }
 
+
 @article{Zhang2012,
   author  = {Zhang, Juyong and Zheng, Jianmin and Wu, Chunlin and Cai, Jianfei},
   title   = {Variational mesh decomposition},
@@ -3787,7 +3798,6 @@
   volume  = {31},
   number  = {3}
 }
-
 
 @inproceedings{Zhang2014,
   author    = {Zhang, Qi and Shen, Xiaoyong and Xu, Li and Jia, Jiaya},
@@ -3804,6 +3814,7 @@
   volume  = {21},
   number  = {7}
 }
+
 
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
@@ -3822,7 +3833,6 @@
   year      = {2016}
 }
 
-
 @inproceedings{Zhang2018,
   author    = {Zhang, Jiahui and Zhao, Hao and Yao, Anbang and Chen, Yurong and Zhang, Li and Liao, Hongen},
   title     = {Efficient semantic scene completion network with spatial group convolution},
@@ -3830,13 +3840,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Zhang2018a,
   title     = {mixup: Beyond Empirical Risk Minimization},
   author    = {Zhang, Hongyi and Cisse, Moustapha and Dauphin, Yann N and Lopez-Paz, David},
   booktitle = ICLR,
   year      = {2018}
 }
-
 
 @inproceedings{Zhang2019,
   title     = {Cascaded Context Pyramid for Full-Resolution {3D} Semantic Scene Completion},
@@ -3949,13 +3959,13 @@
   year      = {2016}
 }
 
+
 @article{Zhou2018,
   title   = {{Open3D}: A modern library for {3D} data processing},
   author  = {Zhou, Qian-Yi and Park, Jaesik and Koltun, Vladlen},
   journal = {arXiv preprint arXiv:1801.09847},
   year    = {2018}
 }
-
 
 @article{Zhou2021,
   title   = {Simple multi-dataset detection},
